--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>Navigation Links</h2>
     <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="seven-gospel-albums.html">Seven Gospel Albums</a></li>
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">References</a></li>
     </ul>
