--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
 </head>
 <body>
+     <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="seven-gospel-albums.html">Seven Gospel Albums</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">References</a></li>
+        </ul>
+    </nav>
     <h1>Ally Smith</h1>
     <p><a href="mailto:ajshc3@umsystem.edu">ajshc3@umsystem.edu</a></p>
     
