--- a/seven-gospel-albums.html
+++ b/seven-gospel-albums.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
+<body id="seven-gospel-albums">
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>7 Albums Best Gospel Albums</title>
-    <style>
-       
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Font1|Font2|Font3&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="seven-gospel-albums">
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="seven-gospel-albums.html">Seven Gospel Albums</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">References</a></li>
+        </ul>
+    </nav>
     <h1>7 Albums Best Gospel Albums</h1>
 
     <p>This paper presents seven outstanding albums from different music genres, highlighting their importance and influence. These albums, both old and new, showcase the best of musical creativity, leaving a lasting impact on the music world.</p>
@@ -40,7 +48,7 @@
 
     <h2>Before the Garden</h2>
     <p>By Caleb Gordon</p>
-     <img src="Caleb Gordon.jpg" alt="Caleb Gordon">
+     <img src="CalebGordon.jpg" alt="Caleb Gordon">
     <p>This album expresses the joy and contentment that come from following God. Its songs capture the happiness and peace found in a life dedicated to faith, creating a musical celebration of spiritual fulfillment.</p>
     <a href="https://www.amazon.com/dp/B0BVBWKH7Z/ref=sr_1_3?crid=1XQK9ESPLSWCK&keywords=caleb+gordon+before+the+garden&qid=1694235111&sprefix=caleb+gordon+before+the+garden%2Caps%2C115&sr=8-3">Listen to Caleb Gordon on Amazon Music</a>
 
