--- a/seven-gospel-albums.html
+++ b/seven-gospel-albums.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>7 Albums Best Gospel Albums</title>
+    <title>7 Best Gospel Albums</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Font1|Font2|Font3&display=swap" rel="stylesheet">
 </head>
