--- a/chicago-style-pizza.html
+++ b/chicago-style-pizza.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Chicago-style Pizza Places in Chicagoland Area</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+      <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="seven-gospel-albums.html">Seven Gospel Albums</a></li>
+           <li><a href="chicago-style-pizza.html">Best Chicago Style Pizza</a></li>
+            <li><a href="#">References</a></li>
+        </ul>
+    </nav>
     <h1>Best Chicago-style Pizza Places in Chicagoland Area</h1>
 
     <h2>Nancy’s Pizza</h2>
