--- a/seven-gospel-albums.html
+++ b/seven-gospel-albums.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="seven-gospel-albums.html">Seven Gospel Albums</a></li>
-            <li><a href="#">Portfolio</a></li>
+           <li><a href="chicago-style-pizza.html">Best Chicago Style Pizza</a></li>
             <li><a href="#">References</a></li>
         </ul>
     </nav>
