--- a/chicago-style-pizza.html
+++ b/chicago-style-pizza.html
@@ -12,7 +12,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="seven-gospel-albums.html">Seven Gospel Albums</a></li>
            <li><a href="chicago-style-pizza.html">Best Chicago Style Pizza</a></li>
-            <li><a href="#">References</a></li>
+            <li><a href="photogallery.html">My Leadership Story</a></li>
         </ul>
     </nav>
     <h1>Best Chicago-style Pizza Places in Chicagoland Area</h1>
