--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="seven-gospel-albums.html">Seven Gospel Albums</a></li>
             <li><a href="chicago-style-pizza.html">Best Chicago Style Pizza</a></li>
-            <li><a href="#">References</a></li>
+            <li><a href="photogallery.html">My Leadership Story</a></li>
         </ul>
     </nav>
     <h1>Ally Smith</h1>
@@ -31,7 +31,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="seven-gospel-albums.html">Seven Gospel Albums</a></li>
         <li><a href="chicago-style-pizza.html">Best Chicago Style Pizza</a></li>
-        <li><a href="#">References</a></li>
+        <li><a href="photogallery.html">My Leadership Story</a></li>
     </ul>
     
     <h2>Other Pages</h2>
