--- a/photogallery.html
+++ b/photogallery.html
@@ -33,7 +33,7 @@
 
     <p>Yes, I am officially the President of Promoting, Advocating, Sisterhood, and Service. At first, I did NOT want to accept this role but the former president told me she didn’t know who else could do it. I accepted the role and I am currently leading this amazing group of ladies. This is our executive board photo for this year and I am sitting in the middle. This picture was taken in October of 2023.</p>
 
-    <img src="family.jpg" alt="President Role - October 2023">
+    <img src="family.JPG" alt="President Role - October 2023">
 
     <p>Here is a picture of our first day in Hickman High School and me leading as President. The picture shows some of our Mizzou mentors. I don't have as many pictures with the mentees because they need media release forms since they are underage. In this picture I am on the left side doing a sorority girl squat. This picture was taken in September of 2023.</p>
 
