--- a/photogallery.html
+++ b/photogallery.html
@@ -21,22 +21,22 @@
 
     <p>This is my first introduction to P.A.S.S where I met all of the mentors in the program. I am in the gold shirt, kind of in the middle. This picture was taken in September of 2020.</p>
 
-    <img src="mentors.png" alt="Introduction to P.A.S.S. - September 2020">
+    <img class="gallery-image" src="mentors.png" alt="Introduction to P.A.S.S. - September 2020">
 
     <p>After a year of being in the program, I applied for executive board and made it! My role was social media coordinator for P.A.S.S. This picture is our executive pictures and I am in the back row in the 4th position from reading left to right. This picture was taken October of 2021.</p>
 
-    <img src="social.png" alt="Executive Board - October 2021">
+    <img class="gallery-image" src="social.png" alt="Executive Board - October 2021">
 
     <p>Going into the next school year, the former president of P.A.S.S. told me that she loved my commitment in the program and asked me if I wanted to take on the role as Vice President for 22-23. It was super nerve-wracking but I said yes. Here are our executive pictures, and me at the top in the photo in my new profound role as VP. This picture was taken in November of 2022.</p>
 
-    <img src="sisters.png" alt="Vice President Role - November 2022">
+    <img class="gallery-image" src="sisters.png" alt="Vice President Role - November 2022">
 
     <p>Yes, I am officially the President of Promoting, Advocating, Sisterhood, and Service. At first, I did NOT want to accept this role but the former president told me she didn’t know who else could do it. I accepted the role and I am currently leading this amazing group of ladies. This is our executive board photo for this year and I am sitting in the middle. This picture was taken in October of 2023.</p>
 
-    <img src="family.JPG" alt="President Role - October 2023">
+    <img class="gallery-image" src="family.JPG" alt="President Role - October 2023">
 
     <p>Here is a picture of our first day in Hickman High School and me leading as President. The picture shows some of our Mizzou mentors. I don't have as many pictures with the mentees because they need media release forms since they are underage. In this picture I am on the left side doing a sorority girl squat. This picture was taken in September of 2023.</p>
 
-    <img src="firstday.jpg" alt="First Day in Hickman High School - September 2023">
+    <img class="gallery-image" src="firstday.jpg" alt="First Day in Hickman High School - September 2023">
 </body>
 </html>
