--- a/chicago-style-pizza.html
+++ b/chicago-style-pizza.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
       <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -16,7 +17,7 @@
         </ul>
     </nav>
     <h1>Best Chicago-style Pizza Places in Chicagoland Area</h1>
-
+ <main id="main-content">
     <h2>Nancy’s Pizza</h2>
     <p>208 S Weber Rd.<br>
     Bolingbrook, IL 60440<br>
@@ -65,5 +66,7 @@
     <a href="tel:+17733275600">(773) 327-5600</a><br>
     <a href="https://www.theartofpizzamenu.com/?utm_source=gbp">Visit Website</a></p>
     <p>Art of Pizza offers an array of gourmet toppings and specialty pizzas. They are known for their creative flavor combinations and commitment to using high-quality ingredients.</p>
+      </main>
+
 </body>
 </html>
