--- a/photogallery.html
+++ b/photogallery.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+     <a href="#main-content" class="skip-link">Skip to main content</a>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -16,7 +17,7 @@
         </ul>
     </nav>
     <h1>The Story of How I Grew in Leadership in P.A.S.S.</h1>
-
+<main id="main-content">
     <p>I’m telling a story about the first Mizzou organization I joined as a freshman coming to Mizzou. Promoting, Advocating, Sisterhood, and Service (P.A.S.S.) is an organization that mentors highschool girls at Hickman High School to help them grow mentally, emotionally, and academically. This is the first organization I joined on campus that made me feel welcomed and I found people who I call my sisters till this day. The story will show how I worked my way up to leadership in the organization.</p>
 
     <p>This is my first introduction to P.A.S.S where I met all of the mentors in the program. I am in the gold shirt, kind of in the middle. This picture was taken in September of 2020.</p>
@@ -38,5 +39,6 @@
     <p>Here is a picture of our first day in Hickman High School and me leading as President. The picture shows some of our Mizzou mentors. I don't have as many pictures with the mentees because they need media release forms since they are underage. In this picture I am on the left side doing a sorority girl squat. This picture was taken in September of 2023.</p>
 
     <img class="gallery-image" src="firstday.jpg" alt="First Day in Hickman High School - September 2023">
+    </main>
 </body>
 </html>
