--- a/seven-gospel-albums.html
+++ b/seven-gospel-albums.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Font1|Font2|Font3&display=swap" rel="stylesheet">
 </head>
 <body id="seven-gospel-albums">
+    <a href="#main-content" class="skip-link">Skip to main content</a>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -18,7 +19,7 @@
         </ul>
     </nav>
     <h1>7 Albums Best Gospel Albums</h1>
-
+<main id="main-content">
     <p>This paper presents seven outstanding albums from different music genres, highlighting their importance and influence. These albums, both old and new, showcase the best of musical creativity, leaving a lasting impact on the music world.</p>
 
     <h2>Heavenly Emotions</h2>
@@ -63,6 +64,6 @@
     <img src="SaintDru.jpg" alt="Saint Dru">
     <p>This album highlights the need to believe in God and not fear being different. It urges individuals to prioritize their connection with God and embrace their distinctiveness, fostering a more genuine relationship with a higher power.</p>
     <a href="https://www.amazon.com/dp/B09HQDJJ52/ref=sr_1_8?crid=IYV804GM7CH5&keywords=saint+dru+album&qid=1694234976&sprefix=saint+dru+album%2Caps%2C102&sr=8-8">Listen to Saint Dru on Amazon Music</a>
-
+</main>
 </body>
 </html>
