--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
     <h1>Ally Smith</h1>
     <p><a href="mailto:ajshc3@umsystem.edu">ajshc3@umsystem.edu</a></p>
     
-    <h2>A Clean Joke</h2>
-    <p>Do you want to hear a pizza joke? Nevermind...it's too cheesy</p>
+    <h2>My one-page statement</h2>
+    <p>The style and decisions reflected on my website represent me. I maintained a consistent color palette, mirroring the hues of my organization—Promoting, Advocating, Sisterhood, and Service. I incorporated elements that define my identity, such as my profound faith, evident in a dedicated tab for my top gospel artists. Originating from Chicago, my love for food is showcased through a section featuring the city's most renowned pizza restaurants.
+    Additionally, I shared my leadership journey within the organization, detailing how I ascended the ranks. The navigation bar, a standout feature, remained unchanged as I found it exceptionally unique and distinct from others. Its pink illumination not only appeals to me but efficiently directs users to different necessary pages. A few changes that I did try to make, making sure all the photos are consistent and that nothing seems overly large on the page. It was definitely challenging using the same CSS style page but I tried my best to make sure everything was consistent. 
+    In essence, my website encapsulates who I am. I take pleasure in its uniqueness and believe it authentically represents my identity. From the consistent color scheme to personal touches like gospel music and Chicago's culinary delights, each element contributes to a platform that resonates with my individuality.
+</p>
     
     <h2>Future Journalist</h2>
     <a href="mailto:ajshc3@umsystem.edu"><img src="ally.jpg" alt="Ally's Portrait"></a>
